Bug 1703402 - Clamp RGB components after YUV conversion for SWGL blending. r=jrmuizel

This expands on an earlier fix from bug 1698009. It turns out we can occasionally find
YUV values which can still produce negative RGB values if only Y is clamped. The final
solution to this is just to clamp the output RGB values rather than input YUV values.

Since this is only used when we fall off the SWGL fast-paths (which properly handle
this clamping already), the performance impact of the extra clamping should be negligible.

Differential Revision: https://phabricator.services.mozilla.com/D111032